Fix nav spacing

--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ ol > * + * {
 
 nav {
   width: 100%;
-  margin-block: var(--space-2xl);
+  margin-block: var(--space-m);
 }
 
 nav > ul {
